--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter_svg: ^2.0.10+1
   easy_localization: ^3.0.7
   google_fonts: ^6.2.1
+  dotted_border: ^2.1.0
+  ## to test UI
+  device_preview: ^1.2.0
   #
   get_it: ^7.7.0
   flutter_bloc: ^8.1.6
@@ -27,6 +30,7 @@ dependencies:
   dartz: ^0.10.1
   connectivity_plus: ^6.0.5
   cached_network_image: ^3.4.1
+  ## 
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +40,7 @@ dev_dependencies:
   build_runner: ^2.4.12
   bloc_test: ^9.1.7
   mockito: ^5.4.4
+  
 
 flutter:
   uses-material-design: true
