--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   dartz: ^0.10.1
   connectivity_plus: ^6.0.5
   cached_network_image: ^3.4.1
+  http: ^1.2.2
   ## 
 
 dev_dependencies:
@@ -40,6 +41,7 @@ dev_dependencies:
   build_runner: ^2.4.12
   bloc_test: ^9.1.7
   mockito: ^5.4.4
+  mocktail: ^1.0.4
   
 
 flutter:
